Update Project JDK version to 11 and add OpenJFX setup to gradle
JDK 10 is no longer supported by the install-jdk.sh script that Travis uses to
install java, so we need to update.
However, because JDK11 does not include javafx any longer, we need to include
it ourselves using gradle.